<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".post.view.NewPostActivity"
    android:fitsSystemWindows="true"
    >

    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imgPost"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:scaleType="centerCrop"
            android:background="@color/cardview_dark_background"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextBlack"
            android:layout_marginTop="@dimen/editext_margin_createaccount"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtTittle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:hint="@string/hint_title"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextBlack"
            android:layout_marginTop="@dimen/editext_margin_createaccount"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:hint="@string/hint_description"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnCreatePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_createPost"

            />

    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>