<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alexander.miappalex.Login.View.Login"
    android:background="@color/colorPrimary"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            >

                <ImageView
                    android:id="@+id/LogoId"
                    android:src="@drawable/aleximg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_login">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ediL1ID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/usuario"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/ediL2ID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btL1Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_button_login"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="next"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    >

                    <TextView
                        android:id="@+id/tvl3ID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_account"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_donthaveacconunt"
                        />

                    <TextView
                        android:id="@+id/tvL4ID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_here"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_donthaveacconunt"
                        android:layout_toRightOf="@id/tvl3ID"
                        android:onClick="btcreateAcc"
                        />

                    <ProgressBar
                        android:id="@+id/progresLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </RelativeLayout>

            </LinearLayout>
        </ScrollView>




    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
