<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pictureCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    android:layout_margin="10dp"
    android:clickable="true"
    android:focusable="true"
    android:padding="16dp"
    android:layout_gravity="center"
    tools:context=".activity.Creeate_account"
    card_view:cardCornerRadius="@dimen/cornerradius_carview">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgP1ID"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:scaleType="centerCrop"
            android:transitionName="@string/transitionname_picture"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/backgroundtext_card"
            >

                <TextView
                    android:id="@+id/tvP1ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_username_cardview"
                    />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvP2ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firsword_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_textsize_card"
                    />

                <TextView
                    android:id="@+id/tvP3ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timecard_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_textsize_card"
                    android:layout_marginLeft="@dimen/timecard_marginleft_card"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/like_margintop"
                >
                <CheckBox
                    android:id="@+id/chb1ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selecter"
                    />


                <TextView
                    android:id="@+id/tvP4ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likennumbercard"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_textsize_card"
                    android:layout_marginLeft="@dimen/timecard_marginleft_card"
                    />
            </LinearLayout>

        </LinearLayout>


    </FrameLayout>


</android.support.v7.widget.CardView>
